tests/typechecker/fail/014-xor.hyg
(2 xor false) : bool